deployment_template.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: okatsuapiexample
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: okatsuapiexample
  template:
    metadata:
      name: okatsuapiexample
      namespace: default
      labels:
        app: okatsuapiexample
    spec:
      containers:
        - name: okatsuapiexample-app
          image: $REGISTRY_HOSTNAME/$GKE_PROJECT/$IMAGE:${GITHUB_SHA}
          ports:
            - containerPort: 8080
      dnsPolicy: Default
