service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okatsuapiexample-svc
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: okatsuapiexample
